--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:docker": "WATCHPACK_POLLING=true react-scripts start",
+    "docker": "docker-compose up",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
